# api-consumer-project

./: README.md  pyproject.toml
src/api_consumer_project/: main.py
src/api_consumer_project/core/: APIClientStrategy.py  ApiClientFactory.py
src/api_consumer_project/models/: ResponseModel.py
src/api_consumer_project/strategies/: GraphQLClient.py  ODataClient.py  RestClient.py  SoapClient.py  WebSocketClient.py
tests/: test_api_client_factory.py  test_graphql_client.py  test_odata_client.py  test_response_model.py  test_rest_client.py  test_soap_client.py  test_web_socket_client.py
